# Renode

./: .code-workspace.code-workspace  .gitignore  .gitmodules  CMakeLists.txt  DEBUG_GUIDE.md  LICENSE  README.md  STM32F412ZGJX_FLASH.ld  TROUBLESHOOTING.md  VSCODE_RENODE_MANUAL.md
apps/blinky/: main.c
cmake/: toolchain-arm-none-eabi.cmake
docs/: DEBUG.md
linker/: stm32f103.ld
ports/arm-cortex-m/: port.c  port.h
renode/: platform.resc
rtos_port/: port.c  port.h
src/: main.c  sys_stubs.c  system_stm32f1xx.c
startup/: startup_stm32f103.s
